<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reconfigure_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.robot_controller_group8.ui.main.ReconfigureFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:gravity="center_horizontal">

    <TextView
        android:id="@+id/reconfigureTitleTextView"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/reconfiguration"
        android:textSize="36sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

    <TextView
        android:id="@+id/f1TitleTextView"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/f1Title"
        android:textSize="20sp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/f1ValueEditText"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/f1Placeholder"
            android:inputType="textShortMessage|textPersonName"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <TextView
        android:id="@+id/f2TitleTextView"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/f2Title"
        android:textSize="20sp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/f2ValueEditText"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/f2Placeholder"
            android:inputType="textShortMessage|textPersonName"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:gravity="center_horizontal">
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:onClick="Save"
        android:background="#88D840"
        android:text="SAVE"
        android:textSize="24dp" />

    <Button
        android:id="@+id/cancelReconfigureBtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:onClick="Cancel"
        android:background="#B1B1B1"
        android:text="CANCEL"
        android:textSize="24dp" />
    </LinearLayout>
    </LinearLayout>


</RelativeLayout>
